@@ -1,8 +1,11 @@
 Changes in 0.70.3:
+  o Client Changes (conary)
+    * conary will now work harder to avoid having a separate erase/installs,
+      instead preferring to link those up into one update when possible.
   o Build Changes (cvc)
     * a local cook of a trove foo will ensure that the changeset created is 
-      installable on your local system (by making sure the version number created
-      is unique)
+      installable on your local system (by making sure the version number 
+      created is unique)
     * don't allow the builddir to appear in rpath
 
 Changes in 0.70.2:
